--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,70 @@
 @charset "utf-8";
 /* CSS Document */
 
+/*----- GENERAL PURPOSE -----*/
+html, body{
+	min-height: 100vh;
+}
+
 .bg-color{
-	height : 100%;
+	min-height: 100vh;
+	width : 100%;
 	margin: 0px;
 	background-image:url(../img/bg_color.jpg);
 	z-index: 1;
 }
 
 .bg-pattern{
+	min-height: 100vh;
 	width : 100%;
 	margin: 0px;
 	background-image:url(../img/bg_pattern_3.png);
 	background-attachment: fixed;
 	z-index: 2;
+}
+
+/*----- MAIN -----*/
+.main{
+	min-height: 100%;
+	max-height: 100%;
+	width: 100%;
+	vertical-align: middle;	
+}
+.main p{	
+	text-align:center;
+}
+.main-col{
+	vertical-align: middle;
+}
+.PI_hexa{
+	width  : 400px; 	
+	height : auto;
+	vertical-align:middle;	
+}
+
+.PI_hexa:hover{	
+	filter  : contrast(110%) brightness(90%);
+	cursor: pointer;
+}
+.main-txt{
+	font-family: 'Oswald', sans-serif;
+	font-size :  35px;
+	color :      white;
+	text-align : center;	
+	margin-top:30px;
+}
+.main-txt p{
+	background-color: rgba(0,0,0,0.8);
+}
+.main-link{
+	/*margin:     46px 0px 0px 0px;*/
+	vertical-align: bottom;
+	text-align: center; 
+	color:      white;
+}
+.main-col-left p{
+	vertical-align: middle;
+}
+.main-col-right p{
+	vertical-align: middle;
 }
