--- a/css/style.css
+++ b/css/style.css
@@ -2,32 +2,24 @@
 /* CSS Document */
 
 /*----- GENERAL PURPOSE -----*/
-html, body{/*
-	min-height: 100vh;
-    min-width:  100vw;*/
-    width: 100%;
-    height: 100%;
+html, body{
 }
 
-.bg-color{/*
-	min-height: 100vh;
-    min-width:  100vw;*/
-    width: 100%;
-    height: 100%;
-	margin: 0;
-    padding:0;
+.container{
+    width:100%;
+    padding: 0;
+}
+
+.bg-color{
+    width:  100%;
+    margin: 0;
 	background-image:url(../img/bg_color.jpg);
     background-repeat: repeat;
 	z-index: 1;
 }
-
-.bg-pattern{/*
-	min-height: 100vh;
-    min-width:  100vw;*/
-    width: 100%;
-    height: 100%;
-	margin: 0;
-    padding:0;
+.bg-pattern{
+    width:  100%;
+    margin: 0;
 	background-image:url(../img/bg_pattern_4_w.png);
     background-repeat: repeat;
     background-attachment: fixed;
@@ -35,42 +27,29 @@ html, body{/*
 }
 
 /*----- MAIN -----*/
-.main{/*
-	min-height: 100%;
-	max-height: 100%;*/
-    width: 100%;
-    height: 100%;/*
+.main{
     height: 100vh;
-	width: 100vw;*/
+	width: 100vw;
     margin: 0;
-    padding:0;
     text-align: center;
 }
-.main-col{/*
-    margin:0;
-    padding:0;*/
-    width:100%;
-    margin: 0 auto;
-    padding: 0;
+.main-col{
     position: absolute;
-    top:50%;
+    top: 50%;
     transform: translateY(-50%);
 }
 
 .row .PI_hexa{
-    width:100%;
-    margin: 0;
-    padding: 0;
     text-align: center;
 }
 .PI_hexa img{
-	width  : 275px;
-	height : auto;
-	vertical-align:middle;
+    width  : 275px;
+    height : auto;
+    vertical-align: middle;
 }
-.PI_hexa img:hover{	/*
-	filter  : contrast(110%) brightness(90%);*/
-	cursor: pointer;
+.PI_hexa img:hover{
+    filter  : contrast(110%) brightness(90%);
+    cursor: pointer;
 }
 
 .name{/*
@@ -78,34 +57,20 @@ html, body{/*
     font-family: 'Just Me Again Down Here', cursive;*/
     font-family: 'Kavivanar', cursive;
     font-weight: 900;
-	font-size :  50px;
-	color :      black;
-	text-align : center;	
-	margin: 20px 0;
-    width: 100%;
-    padding: 0;
-}
+    font-size :  50px;
+    color :      black;
+    text-align : center;
 
-.name p{
-    margin: 0;
-}
-.main-txt p{/*
-	background-color: rgba(0,0,0,0.8);*/
 }
 .job{
-    margin : 20px 0;
-    text-align: center;
-    /*background-color: rgba(0,0,0,0.6);*/
-}
-.job p{
     font-family: 'Oswald', sans-serif;
     font-size :  20px;
     color: black;
-    margin : 0;
+    text-align: center;
 }
+
 .main-social-icon{
-    width: 100%;
-    margin: 20px 0;
+    margin-bottom: 10px;
 }
 .main-social-icon i{
     color: rgb(80,80,80);
@@ -116,78 +81,9 @@ html, body{/*
     font-weight: bold;
 }
 
-.main-message{
-	/*margin: 46px 0px 0px 0px;*/
-	vertical-align: bottom;
-	text-align: center; 
-	color:      white;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
 .main-message h6{
     font-size: 10px;
-    margin-bottom: 0;
+    color: white;
+    vertical-align: bottom;
+    text-align: center;
 }
-
-/* ---------- RESPONSIVE STYLE ---------- */
-
-/* ----- PHONES => USE IT AS DEFAULT-----*/
-@media (max-width: 767px) {
-    /* ---------- Cacher TOP BAR ----------- */
-    .PI_hexa img{
-        width  : 150px;
-        height : auto;
-    }
-
-    .name {
-        font-size :  30px;
-        margin : 10px 0;
-    }
-    .job{
-        margin : 10px 0;
-    }
-    .job p{
-        font-family: 'Oswald', sans-serif;
-        font-size :  15px;
-        color: black;
-        margin : 0;
-    }
-    .main-social-icon{
-        margin: 10px 0;
-    }
-    .main-social-icon i{
-        color: black;
-        margin: 0 5px;
-        font-size: 1.5em;
-    }
-}
-
-/* ----- TABLETS ----- */
-@media (min-width: 768px)and (max-width: 991px) {
-    /* ---------- Cacher TOP BAR ----------- */
-    .PI_hexa img{
-        width  : 250px;
-        height : auto;
-    }
-}
-
-/* ----- DESKTOPS ----- */
-@media (min-width: 992px)and (max-width: 1199px)  {
-    /* ---------- Cacher TOP BAR ----------- */
-    .PI_hexa img{
-        width  : 275px;
-        height : auto;
-    }
-}
-/* ----- LARGE DESKTOP : DEFAULT -----
-@media (min-width: 1200px) {
-
-    .PI_hexa img{
-        width  : 200px;
-        height : auto;
-    }*/
-
-}
-
-
