--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,15 @@ html, body{
     margin-bottom: 0;
 }
 
-/* ---------- RESOINSIVE STYLE ---------- */
+/*----- SKILLS -----*/
+.skills-left-col{
+    border-right : 2px solid #000;
+}
+.skills li{
+    list-style: none;
+}
+
+/* ---------- RESPONSIVE STYLE ---------- */
 
 @media (max-width: 767px) {
     .about-me-large{
@@ -229,6 +237,12 @@ html, body{
     .about-me-txt{
         margin-top: 20px;
         border-left: none;
+    }
+    .sub{
+        display: none;
+    }
+    .skills-left-col{
+        border-right : none;
     }
 }
 @media (min-width: 768px) and (max-width: 991px) {
@@ -239,6 +253,12 @@ html, body{
         margin-top: 20px;
         border-left: none;
     }
+    .sub{
+        display: none;
+    }
+    .skills-left-col{
+        border-right : none;
+    }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
     .about-me-large{
@@ -248,10 +268,15 @@ html, body{
         margin-top: 20px;
         border-left: none;
     }
+    .sub{
+        display: none;
+    }
+    .skills-left-col{
+        border-right : none;
+    }
 }
 @media (min-width: 1200px) {
     .about-me-small{
         display: none;
     }
-
 }
