--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,9 @@ html, body{
 .about-me-txt{
     border-left: 1px solid #000;
 }
+.about-me-small{
+    font-size: 45px;
+}
 
 /*----- FORMATION -----*/
 .formation-content{
@@ -368,14 +371,24 @@ html, body{
     .content{
         display: block;
     }
+    .title{
+        font-size :  70px;
+    }
 
+    .subtitle{
+        font-size :  50px;
+    }
 
     .about-me-large{
         display: none;
     }
     .about-me-txt{
-        margin-top: 20px;
+        font-size: 17px;
+        margin-top: 30px;
         border-left: none;
+    }
+    .about-me-txt p{
+        margin-bottom: 30px;
     }
     .sub{
         display: none;
