TEST [About me size text]

--- a/css/style.css
+++ b/css/style.css
@@ -384,6 +384,7 @@ html, body{
     }
     .about-me-txt{
         font-size: 17px;
+        color: red;
         margin-top: 30px;
         border-left: none;
     }
