--- a/css/style.css
+++ b/css/style.css
@@ -383,8 +383,7 @@ html, body{
         display: none;
     }
     .about-me-txt{
-        font-size: 17px;
-        color: red;
+        font-size: 2em;
         margin-top: 30px;
         border-left: none;
     }
