--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,7 @@ html, body{
         display: none;
     }
     .about-me-txt{
+        color: red;
         font-size: 1em;
         margin-top: 30px;
         border-left: none;
