--- a/css/style.css
+++ b/css/style.css
@@ -383,8 +383,8 @@ html, body{
         display: none;
     }
     .about-me-txt{
-        color: red;
-        font-size: 1em;
+        color: greenyellow;
+        font-size: 1.5em;
         margin-top: 30px;
         border-left: none;
     }
