--- a/css/style.css
+++ b/css/style.css
@@ -401,9 +401,9 @@ html, body{
         font-size: 2.5em;
     }
     .formation-date, .XP-date {
-        padding-right: 5px;
+        padding-left: 5px;
     }
-    
+
     .skills-left-col{
         border-right : none;
     }
