--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,8 @@ html, body{
 .framework{
     font-family: 'Lato', sans-serif;
     font-size:   15px;
-    background-color: rgba(255,255,255,0.35);
+    background-color: rgba(255, 255, 255, 0.6);
+    box-shadow: 1px 1px 8px #000000;
     color: black;
     width: 100%;
     padding: 10px 0 20px 0;
@@ -323,6 +324,13 @@ html, body{
         border-left: none;
     }
 
+    .formation-name span, .formation-school span, .formation-date span, .formation-spec span,
+    .XP-job span, .XP-firm span, .XP-date span, .XP-mission span{
+        color: red;
+    }
+    .skills-star i{
+        font-size: 15em;
+    }
 
     .skills-left-col{
         border-right : none;
@@ -405,8 +413,20 @@ html, body{
     }
 
     .skills-left-col{
-        border-right : none;
+        border-right: none;
     }
+
+    .skills-txt{
+        font-size: 35px;
+    }
+    /*
+    .o-skills-mid-col{
+        font-size: 35px;
+    }
+    .o-skills-right-col{
+        font-size: 35px;
+    }*/
+
     .hobbies-left-col{
         border-right : none;
     }
