UPDATE Skills star icon font-size  [smartphone]

--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ html, body{
     }/*
     .star-icon ul{
         margin-bottom: 25px;
-    }*/
+    }
     .star-icon span{
         display: none;
     }
