--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,7 @@ html, body{
         padding: 8px 0;
     }
     .star-icon span{
-        font-size: 0.1%;
+        font-size: 1px;
     }
     /*
     .o-skills-mid-col{
