--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ html, body{
     }
     .star-icon span{
         font-size: 1px;
-        margin:0;
+        margin:50px;
     }
     /*
     .o-skills-mid-col{
