--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ html, body{
     text-align:     center;
 }
 
-/*---------- CONTENU ----------*/
+/*---------- CONTENT ----------*/
 .content{
     width:   100%;
     padding: 0;
@@ -103,7 +103,7 @@ html, body{
     box-shadow: 1px 1px 8px #000000;
     color: black;
     width: 100%;
-    padding: 10px 0 20px 0;
+    padding: 10px 0 10px 0;
     margin : 0 0 100px 0;
 }
 .title{
@@ -112,7 +112,9 @@ html, body{
     font-weight: normal;
     color: black;/*
     background-color : rgba(0, 0, 0, 1);*/
-    text-align: center;/*
+    text-align: center;
+    margin-bottom: 0;
+    /*
     text-transform: uppercase;*/
 }
 
@@ -126,7 +128,7 @@ html, body{
     text-transform: uppercase;*/
 }
 
-/*----- A PROPOS -----*/
+/*----- ABOUT ME -----*/
 .about-me-txt{
     border-left: 1px solid #000;
 }
@@ -183,7 +185,7 @@ html, body{
     padding: 0;
 }
 
-/*----- XP-----*/
+/*----- XP -----*/
 .XP-content{
     margin-bottom: 30px;
 }
@@ -305,28 +307,71 @@ html, body{
 
 /* ---------- RESPONSIVE STYLE ---------- */
 
+/* ---------- SMARTPHONE ---------- */
+
 @media (max-width: 767px) {
+
     /*----- MAIN -----*/
     .PI_hexa img{
-        width:  500px;
+        width:  300px;
         height: auto;
         vertical-align: middle;
+        margin-bottom:  20px;
+    }
+    .name{
+        font-size:   60px;
+    }
+    .job{
+        font-size :  30px;
+    }
+    .main-social-icon{
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+    .main-social-icon i{
+        font-size: 4em;
+        color:  black;
+        margin: 0 25px;
+    }
+    .main-message h6{
+        display: none;
+    }
+
+
+    /*----- CONTENT -----*/
+    .content{
+        display: block;
+    }
+    .framework{
+        font-size: 25px;
+        margin-bottom: 40px;
+    }
+    .title{
+        font-size: 47px;
+        margin-bottom: 0;
     }
     .sub{
         display: none;
+        margin-top: 20px;
+        padding : 0 25px;
+    }
+    .subtitle{
+        font-size: 35px;
     }
 
+
+    /*----- ABOUT ME ----- */
     .about-me-large{
         display: none;
-    }
+    }/*
     .about-me-txt{
         margin-top: 20px;
         border-left: none;
-    }
+    }*/
 
     .formation-name span, .formation-school span, .formation-date span, .formation-spec span,
     .XP-job span, .XP-firm span, .XP-date span, .XP-mission span{
-        color: red;
+        font-size: 2em;
     }
     .skills-star i{
         font-size: 15em;
@@ -342,6 +387,10 @@ html, body{
         border-right: none;
     }
 }
+
+
+/* ---------- TABLET ----------*/
+
 @media (min-width: 768px) and (max-width: 991px) {
     /*----- MAIN -----*/
     .PI_hexa img{
@@ -382,6 +431,7 @@ html, body{
     }
     .title{
         font-size :  70px;
+        margin-bottom: 0;
     }
 
     .subtitle{
