--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ html, body{
     padding: 100px 0 0 0;
     margin:  0;
     box-shadow: 0px -2px 10px rgba(33, 33, 33, 0.7);
-    background-color: #fbfbfb;
+    transition: background 1s ease;
     /*
     background-color : rgba(255, 255, 255, 0.1);*/
     display: none;
@@ -117,7 +117,7 @@ html, body{
     font-family: 'Ubuntu', sans-serif;
     font-size :  60px;
     font-weight: 500;
-    color: #292929;/*
+    color: black;/*
     background-color : rgba(0, 0, 0, 1);*/
     text-align: center;
     margin-bottom: 25px;
@@ -259,6 +259,15 @@ html, body{
 .o-skills-right-col{
     padding: 0;
 }
+.fa-star{
+    color: rgb(214, 165, 45);
+}
+.fa-star-half-o{
+    color: rgb(214, 165, 45);
+}
+.fa-star-o{
+    color: rgba(234, 254, 123, 0.62);
+}
 
 /*----- HOBBIES -----*/
 .hobbies ul{
@@ -353,6 +362,7 @@ html, body{
         margin-bottom: 40px;
     }
     .title{
+        background-color: rgba(239, 255, 252, 0.35);
         font-size: 47px;
         margin-bottom: 0;
     }
@@ -626,7 +636,7 @@ html, body{
     .about-me-small{
         display: none;
     }
-    .other-skills{
-        padding-top: 20PX;
+    .o-skills{
+        margin-top: 35px;
     }
 }
