--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -4,10 +4,6 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
-body {/*
-    overflow-x: hidden;*/
-}
-
 /* Toggle Styles */
 
 #wrapper {
@@ -18,10 +14,6 @@ body {/*
     transition: all 0.5s ease;
 }
 
-#wrapper.toggled {/*
-    padding-right: 250px;*/
-}
-
 #sidebar-wrapper {
     z-index: 10;
     position: fixed;
@@ -30,7 +22,7 @@ body {/*
     height: 100%;
     margin-right: -250px;
     overflow-y: auto;
-    background: rgba(0, 0, 0, 1);
+    background: rgba(0, 0, 0, 0.8);
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -64,6 +56,8 @@ body {/*
 }
 
 .sidebar-nav li {
+    font-family: Ubuntu, sans-serif;
+    font-size: 15px;
     text-align: right;
     text-indent: 20px;
     line-height: 40px;
@@ -109,9 +103,6 @@ body {/*
 }
 
 @media(min-width:768px) {
-    #wrapper {/*
-        padding-right: 250px;*/
-    }
 
     #wrapper.toggled {
         padding-right: 0;
