--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,14 @@
 /* CSS Document */
 
 /*----- GENERAL PURPOSE -----*/
-html, body{
-}
-
 .container{
     width:   100%;
     padding: 0;
 }
-
 .bg-color{
     width:  100%;
     margin: 0;
     background-color: rgb(52, 152, 219);
-    /*
-	background-image:  url(../img/bg_color.jpg);*/
     background-repeat: repeat;
 	z-index: 1;
 }
@@ -27,7 +21,6 @@ html, body{
     background-attachment: fixed;
 	z-index: 2;
 }
-
 
 /*----- MAIN -----*/
 .main{
@@ -41,7 +34,6 @@ html, body{
     top: 50%;
     transform: translateY(-50%);
 }
-
 .row .PI_hexa{
     text-align: center;
 }
@@ -55,9 +47,7 @@ html, body{
     cursor: pointer;
 }
 
-.name{/*
-    font-family: 'Patrick Hand', cursive;
-    font-family: 'Just Me Again Down Here', cursive;*/
+.name{
     font-family: 'Kavivanar', cursive;
     font-weight: 900;
     font-size:   50px;
@@ -71,7 +61,6 @@ html, body{
     color:       black;
     text-align:  center;
 }
-
 .main-social-icon{
     margin-bottom: 10px;
 }
@@ -83,7 +72,6 @@ html, body{
     color:       black;
     font-weight: bold;
 }
-
 .main-message h6{
     font-size:      10px;
     color:          white;
@@ -107,7 +95,7 @@ html, body{
     position: fixed;
 }
 .menu:hover{
-    width:45px;
+    width: 43px;
     cursor: pointer;
 }
 
@@ -118,43 +106,32 @@ html, body{
     margin:  0;
     box-shadow: 0px -2px 10px rgba(33, 33, 33, 0.7);
     transition: background 1s ease;
-    /*
-    background-color : rgba(255, 255, 255, 0.1);*/
+
     display: none;
 }
-.framework{/*
-    font-family: 'Lato', sans-serif;*/
+.framework{
     font-family: 'PT Sans', sans-serif;
-    font-size:   15px;/*
-    background-color: rgba(255, 255, 255, 0.6);/*
-    box-shadow: 1px 1px 8px #000000;*/
+    font-size:   15px;
     color: #1b1b1b;
     width: 100%;
     padding: 10px 0 10px 0;
     margin : 0 0 100px 0;
 }
-.title{/*
-    font-family: 'Signika', sans-serif;*/
+.title{
     font-family: 'Ubuntu', sans-serif;
     font-size :  60px;
     font-weight: 500;
-    color: black;/*
-    background-color : rgba(0, 0, 0, 1);*/
+    color: black;
     text-align: center;
     margin-bottom: 25px;
-    /*
-    text-transform: uppercase;*/
-}
 
-.subtitle{/*
-    font-family: 'Signika', sans-serif;*/
+}
+.subtitle{
     font-family: 'Ubuntu', sans-serif;
     font-size :  25px;
     font-weight: normal;
-    color: black;/*
-    background-color : rgba(0, 0, 0, 1);*/
-    text-align: center;/*
-    text-transform: uppercase;*/
+    color: black;
+    text-align: center;
 }
 
 /*----- ABOUT ME -----*/
@@ -341,8 +318,6 @@ html, body{
     padding-top: 4px;
 }
 
-
-
 /* ---------- RESPONSIVE STYLE ---------- */
 
 /* ---------- SMARTPHONE ---------- */
@@ -455,7 +430,6 @@ html, body{
 /* ---------- TABLET ----------*/
 
 @media (min-width: 768px) and (max-width: 991px) {
-
     /*----- MAIN -----*/
     .PI_hexa img{
         width:  350px;
@@ -480,7 +454,6 @@ html, body{
         display: none;
     }
 
-
     /*----- CONTENT -----*/
     .content{
         display: block;
@@ -502,7 +475,6 @@ html, body{
         font-size: 40px;
     }
 
-
     /*----- ABOUT ME ----- */
     .about-me-large{
         display: none;
@@ -511,7 +483,6 @@ html, body{
         margin-top: 20px;
         border-left: none;
     }
-
 
     /*----- FORMATION & XP -----*/
     .formation-name span, .formation-school span, .formation-date span, .formation-spec span,
@@ -522,7 +493,6 @@ html, body{
         font-size: 0.85em;
         transform: translateY(-4px);
     }
-
 
     /*----- SKILLS -----*/
     .skills-star i{
@@ -560,7 +530,6 @@ html, body{
     }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
-
     /*----- MAIN -----*/
     .PI_hexa img{
         width: 250px;
@@ -581,7 +550,6 @@ html, body{
         margin: 0 15px;
     }
 
-
     /*----- CONTENT -----*/
     .framework{
         font-size: 25px;
@@ -599,7 +567,6 @@ html, body{
         font-size: 35px;
     }
 
-
     /*----- ABOUT ME ----- */
     .about-me-large{
         display: none;
@@ -608,7 +575,6 @@ html, body{
         margin-top: 20px;
         border-left: none;
     }
-
 
     /*----- FORMATION & XP -----*/
     .formation-name span, .formation-school span, .formation-date span, .formation-spec span,
@@ -619,7 +585,6 @@ html, body{
         font-size: 0.85em;
         transform: translateY(-4px);
     }
-
 
     /*----- SKILLS -----*/
     .skills-star i{
@@ -635,7 +600,6 @@ html, body{
         padding-left: 0;
     }
 
-
     /*----- HOBBIES -----*/
     .hobbies-left-col{
         border-right : none;
@@ -643,7 +607,6 @@ html, body{
     .hobbies li{
         font-size: 0.84em;
     }
-
 
     /*----- CONTACT -----*/
     .contact-left-col{
